fixed bottom whitespace

--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -4,6 +4,8 @@
     display: flex;
     justify-content: space-around;
     background-color: #333;
+    position: absolute;
+    bottom: 0px;
 }
 
 .footer-label {
