--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -1,5 +1,4 @@
 #homepage-container {
-    height: 100%;
     background-color: #e5e5e5;
     display: flex;
     flex-direction: column;
