--- a/frontend/src/components/Tracks/track.css
+++ b/frontend/src/components/Tracks/track.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #e3e3e3;
+    /* height: 100%; */
 }
 
 #track-container {
