--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,14 @@
     text-decoration: none;
 }
 
-#app-hero {
-    height: auto;
+#root {
+    height: 100vh;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #e3e3e3;
+    padding-bottom: 30px;
 }
 
 li {
